# zrpc

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
examples/: client.cc  msgpack_test.cc  server.cc  types.h
include/: client.hpp  macros.hpp  macros_end.hpp  msgpack.hpp  server.hpp  zrpc.hpp
src/: client.hpp  macros.hpp  macros_end.hpp  main.cc  server.hpp  traits.hpp  zrpc.hpp
